iptables.rules
# Generated by iptables-save v1.4.14 on Wed Jul 22 11:29:06 2015
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [5545:5525893]
:OUTPUT ACCEPT [1707:206190]
:ssh_brute_check - [0:0]
-A INPUT -s 192.168.2.0/24 -p tcp -m tcp --dport 3000 -j ACCEPT
-A INPUT -p tcp -m conntrack --ctstate INVALID,NEW -m tcp --tcp-flags SYN,ACK SYN,ACK -j REJECT --reject-with tcp-reset
-A INPUT -i lo -j ACCEPT
-A INPUT -i eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i eth1 -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m conntrack --ctstate NEW -m tcp --dport 22 -j ssh_brute_check
-A INPUT -p tcp -m conntrack --ctstate NEW -m tcp --dport 22000 -j ssh_brute_check
-A INPUT -p tcp -m conntrack --ctstate NEW -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -m connlimit --connlimit-above 32 --connlimit-mask 32 --connlimit-saddr -j DROP
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p udp -m udp --dport 53 -m connlimit --connlimit-above 8 --connlimit-mask 32 --connlimit-saddr -j DROP
-A INPUT -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 8000:8010 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 3000:3010 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 2200 -j ACCEPT
-A INPUT -s 192.168.1.0/24 -p tcp -m state --state NEW -m tcp --dport 2200 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -i lo -m comment --comment "Aceptar conexiones internas" -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -m comment --comment "Aceptar conexiones existentes" -j ACCEPT
-A INPUT -j LOG
-A INPUT -j DROP
-A INPUT -s 192.168.0.0/24 -p tcp -m tcp --dport 3000 -j ACCEPT
-A INPUT -s 127.0.0.0/8 -p tcp -m tcp --dport 3000 -j ACCEPT
-A INPUT -s 192.168.2.1/32 -p tcp -m tcp --dport 5000 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 5000 -j ACCEPT
-A INPUT -s 192.168.2.0/24 -i eth1 -j ACCEPT
-A FORWARD -i eth1 -j ACCEPT
-A FORWARD -d 192.168.2.6/32 -i eth1 -p tcp -m tcp --dport 8000 -j ACCEPT
-A FORWARD -d 192.168.2.5/32 -i eth1 -p tcp -m tcp --dport 5000 -j ACCEPT
-A FORWARD -s 192.168.3.2/32 -d 192.168.10.5/32 -p tcp -m tcp --dport 5432 -j ACCEPT
-A FORWARD -s 192.168.2.0/24 -d 192.168.2.5/32 -p tcp -m tcp --sport 1024:65535 --dport 5000 -j ACCEPT
-A FORWARD -s 192.168.2.5/32 -d 192.168.2.0/24 -p tcp -m tcp --sport 5000 --dport 1024:65535 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -o eth1 -j ACCEPT
-A ssh_brute_check -m conntrack --ctstate NEW -m recent --update --seconds 300 --hitcount 3 --name DEFAULT --rsource -j DROP
-A ssh_brute_check -m recent --set --name DEFAULT --rsource -j ACCEPT
COMMIT
# Completed on Wed Jul 22 11:29:06 2015
# Generated by iptables-save v1.4.14 on Wed Jul 22 11:29:06 2015
*nat
:PREROUTING ACCEPT [40662:4734266]
:INPUT ACCEPT [11664:797897]
:OUTPUT ACCEPT [7837:508260]
:POSTROUTING ACCEPT [814:51057]
:SYN-FLOOD - [0:0]
-A PREROUTING -i eth1 -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 3128
-A PREROUTING -d 192.168.2.1/32 -i eth1 -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -j SYN-FLOOD
-A PREROUTING -i eth1 -p tcp -m tcp --dport 8000:8010 -j DNAT --to-destination 192.168.2.6
-A PREROUTING -i eth1 -p tcp -m tcp --dport 5000:5010 -j DNAT --to-destination 192.168.2.5
-A PREROUTING -i eth0 -p tcp -m tcp --dport 5000:5010 -j DNAT --to-destination 192.168.2.5
-A POSTROUTING -o eth0 -j MASQUERADE
-A POSTROUTING -s 192.168.2.0/24 -o eth0 -j MASQUERADE
-A SYN-FLOOD -m limit --limit 12/sec --limit-burst 24 -j RETURN
COMMIT
# Completed on Wed Jul 22 11:29:06 2015
# Generated by iptables-save v1.4.14 on Wed Jul 22 11:29:06 2015
*mangle
:PREROUTING ACCEPT [1472337:962192022]
:INPUT ACCEPT [321494:211368329]
:FORWARD ACCEPT [1146176:749935385]
:OUTPUT ACCEPT [323984:232057325]
:POSTROUTING ACCEPT [1470198:981995864]
COMMIT
# Completed on Wed Jul 22 11:29:06 2015
